--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    //Parcelize
     id 'kotlin-parcelize'
     // Navigation.SafeArgs
     id 'androidx.navigation.safeargs.kotlin'
