--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id 'kotlin-parcelize'
     // Navigation.SafeArgs
     id 'androidx.navigation.safeargs.kotlin'
+    //Kotlin symbol processing  for Room
+    id("com.google.devtools.ksp")
 }
 
 android {
@@ -28,11 +30,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     buildFeatures{
@@ -74,5 +76,12 @@ dependencies {
     implementation "io.insert-koin:koin-core:$koin_version"
     implementation "io.insert-koin:koin-android:$koin_version"
     testImplementation "io.insert-koin:koin-test:$koin_version"
+    //Splash screen
+    implementation("androidx.core:core-splashscreen:1.0.1")
+    // Room libraries
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    //Kotlin symbol processing for Room
+    ksp "androidx.room:room-compiler:$room_version"
 
 }
