--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
         // Navigation
         nav_version = "2.5.2"
         kotlin_version = '1.8.20-RC2'
+        room_version = '2.5.2'
+
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
@@ -17,6 +19,7 @@ buildscript {
 }
 
 plugins {
+    id("com.google.devtools.ksp") version "1.8.22-1.0.11" apply false
     id 'com.android.application' version '8.0.0' apply false
     id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
